No refresh for Hashicorp Vault
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>

--- a/hashicorp-vault.adoc
+++ b/hashicorp-vault.adoc
@@ -1,4 +1,4 @@
-== Hashicorp Vault Secrets Retrieval and Refresh with Apache Camel On OCP
+== Hashicorp Vault Secrets Retrieval with Apache Camel On OCP
 
 First of all all of the following could be supported by simply adding
 the camel-hashicorp-vault component to your classpath.
