--- a/ocp-secrets.adoc
+++ b/ocp-secrets.adoc
@@ -46,7 +46,7 @@ The application will have to run with that clusterrole.
 This will ensure the running application won’t be able to do more than list and get secrets.
 
 The same configuration could be seen on OCP by following the Camel on
-OCP Best Practices repository, in particular, the AWS vault section. You
+OCP Best Practices repository, in particular, the OCP Secrets section. You
 can follow the example for both the runtimes supported by Red Hat Build
 of Apache Camel:
 
