Adjusted and format and switched to a common structure of the documents.

--- a/docs/aws-secrets-manager-vault.adoc
+++ b/docs/aws-secrets-manager-vault.adoc
@@ -1,4 +1,25 @@
-== AWS Secrets Manager Secrets Retrieval and Refresh with Apache Camel On OCP
+= AWS Secrets Manager - Secrets Retrieval and Refresh with Apache Camel On OCP
+:icons: font
+:numbered:
+:title: AWS Secrets Manager - Secrets Retrieval and Refresh with Apache Camel On OCP
+:toc: left
+:toclevels: 2
+:source-highlighter: coderay
+
+== Context
+
+Secret managers securely store sensitive data like API keys and passwords, preventing hardcoded secrets and reducing exposure risks. They provide encrypted storage, access control, and automated rotation, ensuring secure management of credentials across distributed applications.
+It is crucial, expecially in could environments, to be able to use such services.
+
+== Prerequisites 
+
+A camel integrationt o be deployed on https://www.redhat.com/en/technologies/cloud-computing/openshift[**OpenShift**].
+
+== Goal
+
+Provide a configuration example to retrieve AWS Secrets Manager Secrets and use them in a camel integration.
+
+== Configuration
 
 First of all all of the following could be supported by simply adding
 the camel-aws-secrets-manager component to your classpath.
@@ -33,18 +54,20 @@ In general the suggested way of creating a secret is by using JSON.
 
 You can create a secret through AWS CLI with the following command:
 
-aws secretsmanager create-secret –name authsecdb –secret-string
-file://secret.json
+....
+aws secretsmanager create-secret –name authsecdb –secret-string \file://secret.json
+....
 
 Where the content of secret.json could be something like:
 
-....
+[source,json]
+----
 {
   "username": "postgresadmin",
   "password": "xxxx",
   "host": "host"
 }
-....
+----
 
 The secret name will be authsecdb and the secret fields will be
 username, password and host.
@@ -75,7 +98,7 @@ https://github.com/oscerd/camel-on-ocp-best-practices/tree/main/vault/aws/camel-
 https://github.com/oscerd/camel-on-ocp-best-practices/tree/main/vault/aws/camel-spring-boot/retrieval[Camel-Spring-Boot
 - Camel on OCP Best practices - Camel Spring Boot - AWS Vault]
 
-== AWS Secrets Manager Enabling Secret Refresh
+== Enabling Secret Refresh
 
 In the section above we saw how to set up and use the AWS Secret Manager
 Secrets retrieval. In this section, we’ll focus on introducing the
@@ -120,7 +143,7 @@ https://github.com/oscerd/camel-on-ocp-best-practices/tree/main/vault/aws/camel-
 https://github.com/oscerd/camel-on-ocp-best-practices/tree/main/vault/aws/camel-spring-boot/retrieval-and-refresh[Camel-Spring-Boot
 - Camel on OCP Best practices - AWS Vault with Refresh]
 
-== AWS Secrets Manager Enabling Secret Refresh with Eventbridge/SQS
+== Enabling Secret Refresh with Eventbridge/SQS
 
 The Camel AWS Secret Manager refresh feature is based on the Cloudtrail
 entries related to the monitored secret. The reloading task will check
@@ -140,8 +163,8 @@ On the AWS side, the following resources need to be created:
 * an AWS SQS Queue
 * an Eventbridge rule of the following kind
 
-____
-....
+[source,json]
+----
 {
   "source": ["aws.secretsmanager"],
   "detail-type": ["AWS API Call via CloudTrail"],
@@ -149,8 +172,7 @@ ____
     "eventSource": ["secretsmanager.amazonaws.com"]
   }
 }
-....
-____
+----
 
 User needs to set the a Rule target to the AWS SQS Queue for Eventbridge
 rule
@@ -159,17 +181,37 @@ User needs to give permission to the Eventbrige rule, to write on the
 above SQS Queue. For doing this you’ll need to define a json file like
 this:
 
-....
+[source,json]
+----
 {
-    "Policy": "{\"Version\":\"2012-10-17\",\"Id\":\"<queue_arn>/SQSDefaultPolicy\",\"Statement\":[{\"Sid\": \"EventsToMyQueue\", \"Effect\": \"Allow\", \"Principal\": {\"Service\": \"events.amazonaws.com\"}, \"Action\": \"sqs:SendMessage\", \"Resource\": \"<queue_arn>\", \"Condition\": {\"ArnEquals\": {\"aws:SourceArn\": \"<eventbridge_rule_arn>\"}}}]}"
+  "Policy": {
+    "Version": "2012-10-17",
+    "Id": "<queue_arn>/SQSDefaultPolicy",
+    "Statement": [
+      {
+        "Sid": "EventsToMyQueue",
+        "Effect": "Allow",
+        "Principal": {
+          "Service": "events.amazonaws.com"
+        },
+        "Action": "sqs:SendMessage",
+        "Resource": "<queue_arn>",
+        "Condition": {
+          "ArnEquals": {
+            "aws:SourceArn": "<eventbridge_rule_arn>"
+          }
+        }
+      }
+    ]
+  }
 }
-....
+----
 
 Change the values for queue_arn and eventbridge_rule_arn, save the file
 with policy.json name and run the following command with AWS CLI
 
 ....
-aws sqs set-queue-attributes --queue-url <queue_url> --attributes file://policy.json
+aws sqs set-queue-attributes --queue-url <queue_url> --attributes \file://policy.json
 ....
 
 where queue_url is the AWS SQS Queue URL of the just created Queue.
@@ -195,3 +237,4 @@ secret value update.
 This approach with Eventbridge is probably the most reliable among the
 solutions we have. Mainly because we are going to search only for
 Secrets Manager events instead of Cloudtrail full events list.
+
