--- a/docs/gcp-secret-manager-vault.adoc
+++ b/docs/gcp-secret-manager-vault.adoc
@@ -1,5 +1,25 @@
-== GCP Secrets Manager Secrets Retrieval and Refresh with Apache Camel On OCP
+= GCP Secrets Manager - Secrets Retrieval and Refresh with Apache Camel On OCP
+:icons: font
+:numbered:
+:title: GCP Secrets Manager Secrets Retrieval and Refresh with Apache Camel On OCP
+:toc: left
+:toclevels: 2
+:source-highlighter: coderay
 
+== Context
+
+Secret managers securely store sensitive data like API keys and passwords, preventing hardcoded secrets and reducing exposure risks. They provide encrypted storage, access control, and automated rotation, ensuring secure management of credentials across distributed applications.
+It is crucial, expecially in could environments, to be able to use such services.
+
+== Prerequisites 
+
+A camel integrationt o be deployed on https://www.redhat.com/en/technologies/cloud-computing/openshift[**OpenShift**].
+
+== Goal
+
+Provide a configuration example to retrieve GCP Secrets Manager Secrets and use them in a camel integration.
+
+== Configuration
 First of all all of the following could be supported by simply adding
 the camel-google-secret-manager component to your classpath.
 
@@ -31,19 +51,18 @@ is by using JSON.
 
 You can create a secret through Gcloud CLI with the following command:
 
-....
-gcloud secrets create authsecdb --data-file=secret.json
-....
+`gcloud secrets create authsecdb --data-file=secret.json`
 
 Where the content of secret.json could be something like:
 
-....
+[source,json]
+----
 {
   "username": "postgresadmin",
   "password": "xxxx",
   "host": "host"
 }
-....
+----
 
 The secret name will be authsecdb and the secret fields will be
 username, password and host.
@@ -219,3 +238,4 @@ https://github.com/oscerd/camel-on-ocp-best-practices/tree/main/vault/gcp/camel-
 
 https://github.com/oscerd/camel-on-ocp-best-practices/tree/main/vault/gcp/camel-spring-boot/retrieval-and-refresh[Camel-Spring-Boot
 - Camel on OCP Best practices - GCP Vault with refresh]
+
