--- a/docs/ocp-secrets.adoc
+++ b/docs/ocp-secrets.adoc
@@ -1,5 +1,24 @@
-== OCP Secrets Retrieval with Apache Camel Kubernetes Component
+= OCP Secrets Retrieval with Apache Camel Kubernetes Component
+:icons: font
+:numbered:
+:title: OCP Secrets Retrieval with Apache Camel Kubernetes Component
+:toc: left
+:toclevels: 2
+:source-highlighter: coderay
 
+== Context
+
+Kubernetes Secrets are usually used to store and manage sensitive data, such as API keys, passwords, and tokens, within a Kubernetes cluster. They help keep this information secure by avoiding hardcoding it in configuration files. Secrets can be injected into containers or read at runtime, ensuring that sensitive data are only accessible to authorized services or pods. 
+
+== Prerequisites 
+
+A camel integrationt o be deployed on https://www.redhat.com/en/technologies/cloud-computing/openshift[**OpenShift**].
+
+== Goal
+
+Provide a configuration example to read kubernetes secrets values in camel applications.
+
+== Configuration
 In Camel we provide the secret function to retrieve secret value from a secret resource.
 
 The syntax is pretty simple:
@@ -20,7 +39,8 @@ The minimum permissions are list and get.
 
 Alternatively, you can create a yaml file with the following content:
 
-....
+[source,yaml]
+----
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -33,7 +53,7 @@ rules:
   verbs:
   - get
   - list
-....
+----
 
 And then run 
 
