--- a/docs/README.adoc
+++ b/docs/README.adoc
@@ -1,23 +1,28 @@
+= Apache Camel on OCP Best practices
 :icons: font
 :numbered:
 :title: Apache Camel on OCP Best practices
+:toc: left
+:toclevels: 2
 ifdef::env-github[:outfilesuffix: .adoc]
+
+toc::[]
 
 == Introduction
 
-A list of best practices documents for Apache Camel on OCP
+A curated list of documented best practices to use Apache Camel on https://www.redhat.com/en/technologies/cloud-computing/openshift[**OpenShift**].
 
 == Vaults
 
-. xref:aws-secrets-manager-vault.adoc[AWS Secrets Manager]
-. xref:gcp-secret-manager-vault.adoc[GCP Secret Manager]
-. xref:azure-key-vault.adoc[Azure Key Vault]
-. xref:hashicorp-vault.adoc[Hashicorp Vault]
+=== xref:aws-secrets-manager-vault.adoc[AWS Secrets Manager]
+=== xref:gcp-secret-manager-vault.adoc[GCP Secret Manager]
+=== xref:azure-key-vault.adoc[Azure Key Vault]
+=== xref:hashicorp-vault.adoc[Hashicorp Vault]
 
 == OCP Configmaps/Secrets
 
-. xref:ocp-secrets.adoc[OCP Secrets]
-. xref:ocp-configmaps.adoc[OCP Configmaps]
+=== xref:ocp-secrets.adoc[OCP Secrets]
+=== xref:ocp-configmaps.adoc[OCP Configmaps]
 
 
 
