--- a/docs/aws-secrets-manager-vault.adoc
+++ b/docs/aws-secrets-manager-vault.adoc
@@ -81,6 +81,8 @@ secrets field will be retrieved.
 {{aws:authsecdb/password}}
 ....
 
+For more information about the syntax usabl, you can look at https://camel.apache.org/components/4.8.x/aws-secrets-manager-component.html#_using_aws_secrets_manager_property_function[AWS Secrets Manager Property Function]
+
 The Spring Boot and Quarkus runtime have the starter and the extension
 related to AWS Secret Manager in their catalogs. The export and export
 Kubernetes command from camel-jbang, will automatically add the
