--- a/docs/gcp-secret-manager-vault.adoc
+++ b/docs/gcp-secret-manager-vault.adoc
@@ -76,6 +76,8 @@ secrets field will be retrieved.
 {{gcp:authsecdb/password}}
 ....
 
+For more information about the usable syntax, you can look at https://camel.apache.org/components/4.8.x/google-secret-manager-component.html#_using_gcp_secret_manager_properties_source[Google Secret Manager Property Function]
+
 The Spring Boot and Quarkus runtime have the starter and the extension
 related to AWS Secret Manager in their catalogs. The export and export
 Kubernetes command from camel-jbang, will automatically add the
